--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,5 +2,7 @@
 
     <string name="title_qualifier_detail">Qualifier Detail</string>
     <string name="title_qualifier_list">Qualifiers</string>
+    <string name="about">About</string>
+    <string name="help">Help</string>
 
 </resources>
