--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="title_qualifier_list">Qualifiers</string>
     <string name="about">About</string>
     <string name="help">Help</string>
+    <string name="configuration">Configuration</string>
+    <string name="qualifier_value">Qualifier Value</string>
+    <string name="description">Description</string>
 
 </resources>
